Hands Off My Block v0.3.0 for 1.21.11
HandsOffMyBlock Common:
- Probably my biggest mod changelog to date btw
- Edited init logger message
- Fabric and NeoForge startup methods now call the common init() method, which wasn't being used previously and thus the init logger never fired

Villager Bed Reclaim Inconsistency Fix:
- Bed POI refresh now does a full "rebuild" cycle so old/pre-existing beds properly re-register after unmarking, and both halves of a bed are refreshed on unmark, which makes reclaimed beds behave more like a real break/place update.
- When marked, the bed head POI is explicitly released first to avoid stale claim occupancy before blocking the bed.
- When unmarking, nearby villagers get a "nudge" in their pathfinding so they retry claiming/sleeping in unmarked beds sooner.

Context-Based Unmark Reasoning:
- New HandsOffMyServerLevelSetBlockMixin hook that captures destruction reasons before the marked block state changes, and added contextual reasoning for POIs that are unmarked due to it being destroyed (Broken, Burned, Exploded, Pushed, Replaced)
- Updated translations for en_us, mostly for the new context-based reasoning actionbar components listed above

Marked Bell Logic:
- Added the bell to WORKSTATIONS HashSet allowing bells to be marked like any other POI (if this causes any unintended side effects, please make a bug report! More info below...)
- Extended villager invalidation logic to work with bells, nearby villagers now clear MEETING_POINT memory if it points to that marked bell
- Also added a safeguard that continuously drops MEETING_POINT which prevents villagers from reconnecting to marked bells after the initial invalidation pass
- Added bell-compatible particle triggering by updating villagerHasMemoryForBlock() to include MEETING_POINT in Fabric and NeoForge, so marking a bell now counts as a villager-linked POI for angry particle feedback.

--- a/common/src/main/resources/assets/handsoffmyblock/lang/en_us.json
+++ b/common/src/main/resources/assets/handsoffmyblock/lang/en_us.json
@@ -22,7 +22,12 @@
   "message.actionbar.bedToggle": "Bed Marking: ",
   "message.actionbar.tweakToggle": "Pathfinding Tweaks: ",
   "message.actionbar.showMarkings": "Show Markings: ",
-  "component.actionbar.destroyed": " §e(Destroyed)",
+  "component.actionbar.broken": "Broken",
+  "component.actionbar.explosion": "Exploded",
+  "component.actionbar.fire": "Burned",
+  "component.actionbar.piston": "Pushed",
+  "component.actionbar.replaced": "Replaced",
+  "component.actionbar.unknown": "Destroyed",
   "component.actionbar.enabled": "Enabled",
   "component.actionbar.disabled": "Disabled",
 
