Hands Off My Block 0.3.2 - "The Server-Side Update!"
- Lots of client-side tweaks and UI reliability fixes specifically when playing on servers
- Fixed Fabric config screen title widget creation so it is only created once
- Disabled the marker item `EditBox` and all client config toggles on multiplayer servers
- Updated translations, and added a new localized message key `message.actionbar.onServer` for en_us and ko_kr.
- Added tooltips to disabled config controls on multiplayer servers using the onServer message.
- Updated keybind behavior on multiplayer servers:
  - `show_markings` and `require_sneaking` keybinds no longer change local client config when on servers, they will now display the same onServer actionbar message instead

--- a/common/src/main/resources/assets/handsoffmyblock/lang/ko_kr.json
+++ b/common/src/main/resources/assets/handsoffmyblock/lang/ko_kr.json
@@ -32,5 +32,6 @@
   "component.actionbar.disabled": "비활성화됨",
 
   "message.actionbar.configSaved": "§a설정이 저장되었습니다! §f표시 아이템: %s",
-  "message.actionbar.configFailed": "§c설정 저장 실패! §f유효하지 않은 아이템 ID입니다"
+  "message.actionbar.configFailed": "§c설정 저장 실패! §f유효하지 않은 아이템 ID입니다",
+  "message.actionbar.onServer": "멀티플레이어에서 이용 불가"
 }
